@@ -1441,209 +1441,8 @@ bool CLinearTimeAbsolute::SetSecondsString(UTF8 *arg_szSeconds)
 //
 #ifdef WIN32
 
-// This calculates (FACTOR_100NS_PER_SECOND*x)/y accurately without
-// overflow.
-//
-class CxyDiv
-{
-public:
-    void SetDenominator(const INT64 y_arg);
-    INT64 Convert(const INT64 x_arg);
-
-private:
-    INT64 A, B, C, D;
-};
-
-void CxyDiv::SetDenominator(const INT64 y_arg)
-{
-    A = FACTOR_100NS_PER_SECOND / y_arg;
-    B = FACTOR_100NS_PER_SECOND % y_arg;
-    C = y_arg/2;
-    D = y_arg;
-}
-
-INT64 CxyDiv::Convert(const INT64 x_arg)
-{
-    return A*x_arg + (B*x_arg + C)/D;
-}
-
-static CxyDiv Ticks2Seconds;
-static INT64  xIntercept = 0;
-static INT64  liInit;
-static INT64  tInit;
-static INT64  liMinSampleError  = 5*FACTOR_100NS_PER_MILLISECOND;
-static INT64  liMinSampleError2 = 5*FACTOR_100NS_PER_MILLISECOND;
-static bool   bQueryPerformanceAvailable = false;
-static bool   bUseQueryPerformance = false;
-
-const INT64 TargetError = 5*FACTOR_100NS_PER_MILLISECOND;
-
-/*! \brief Obtain a raw time sample.
- *
- * Our intention here is to obtain a, t, and b in that order as quickly as
- * possible. The two performance counter values bracket the system time.
- *
- * \param a        Leading performance counter.
- * \param t        System Time from Windows.
- * \param b        Trailing performance counter.
- * \return         Whether above values are valid.
- */
-
-DCL_INLINE bool GetTimeSample(INT64 &a, INT64 &t, INT64 &b)
-{
-    if (QueryPerformanceCounter((LARGE_INTEGER *)&a))
-    {
-        GetSystemTimeAsFileTime((struct _FILETIME *)&t);
-        if (QueryPerformanceCounter((LARGE_INTEGER *)&b))
-        {
-            return true;
-        }
-    }
-    bQueryPerformanceAvailable = false;
-    return false;
-}
-
-/*! \brief Attempt to obtain a reasonable time sample.
- *
- * If possible, we obtain a relatively recent system time and its
- * corresponding performance counter.  We do care that t corresponds closely
- * with li, however, it is not critically important that t or li represent
- * the most accurate representation of current time.
- *
- * \param t        System Time from Windows.
- * \param li       Corresponding performance counter.
- * \return         Whether above values are valid.
- */
-
-bool GetReasonableTimeSample(INT64 &t, INT64 &li)
-{
-    int i;
-    for (i = 0; i < 5; i++)
-    {
-        INT64 a, b;
-        if (  GetTimeSample(a, t, b)
-           && a < b)
-        {
-            INT64 d = b - a;
-            if (d < liMinSampleError)
-            {
-                liMinSampleError = d;
-                liMinSampleError2 = 2*d;
-            }
-            if (d < liMinSampleError2)
-            {
-                // Average first and last counter values.
-                //
-                li = a + (b-a)/2;
-                return true;
-            }
-
-            // A glitch might cause the difference between a and b to be
-            // unreasonably small, so we slowly open the minimum up again.
-            //
-            liMinSampleError++;
-            liMinSampleError2 += 2;
-        }
-    }
-    return false;
-}
-
-/*! \brief Develop a general correspondence between the system time and
- *         high-resolution performance counters.
- *
- * Given high-quality time samples, we develop a linear relationship between
- * system time and the performance counters.  System time is typically given
- * at 10ms resolution, but the high-resolution performance counters
- * potentially provide microsecond resolution.  Also, the high-resolution
- * performance counters are more efficient to query.
- *
- * Since this calibration process occurs infrequently, performance is not an
- * issue.  Typically, we save time in GetUTCLinearTime by doing more work
- * here.
- *
- * \return         Whether to continue scheduling calibration.
- */
-
-bool CalibrateQueryPerformance(void)
-{
-    if (!bQueryPerformanceAvailable)
-    {
-        return false;
-    }
-
-    INT64 li;
-    INT64 t;
-
-    bUseQueryPerformance = false;
-    if (GetReasonableTimeSample(t, li))
-    {
-        // x = y/m + b
-        // m = dy/dx = (y1 - y0)/(x1 - x0)
-        //
-        // y is ticks and x is seconds.
-        //
-        INT64 dli = li - liInit;
-        INT64 dt  =  t -  tInit;
-
-        if (  0 < dt
-           && 0 < dli)
-        {
-            CxyDiv Ticks2Freq;
-            Ticks2Freq.SetDenominator(dt);
-            INT64 liFreq = Ticks2Freq.Convert(dli);
-            if (0 < liFreq)
-            {
-                // Estimate error of prediction using previous line.
-                //
-                // x = y/m + b;
-                //
-                INT64 tError = Ticks2Seconds.Convert(li) + xIntercept - t;
-
-                // Establish revised line, b = x - y/m
-                //
-                Ticks2Seconds.SetDenominator(liFreq);
-                xIntercept = t - Ticks2Seconds.Convert(li);
-
-                if (  -TargetError < tError
-                   && tError < TargetError)
-                {
-                    bUseQueryPerformance = true;
-                }
-            }
-        }
-    }
-    return true;
-}
-
-static void InitializeQueryPerformance(void)
-{
-    // The frequency returned is the number of ticks per second.
-    //
-    INT64 liFreq;
-    if (QueryPerformanceFrequency((LARGE_INTEGER *)&liFreq))
-    {
-        Ticks2Seconds.SetDenominator(liFreq);
-        if (GetReasonableTimeSample(tInit, liInit))
-        {
-            xIntercept = tInit - Ticks2Seconds.Convert(liInit);
-            bQueryPerformanceAvailable = true;
-        }
-    }
-}
-
 void GetUTCLinearTime(INT64 *plt)
 {
-    if (bUseQueryPerformance)
-    {
-        INT64 li;
-        if (QueryPerformanceCounter((LARGE_INTEGER *)&li))
-        {
-            *plt = Ticks2Seconds.Convert(li) + xIntercept;
-            return;
-        }
-        bQueryPerformanceAvailable = false;
-        bUseQueryPerformance = false;
-    }
     GetSystemTimeAsFileTime((struct _FILETIME *)plt);
 }
 
@@ -2084,9 +1883,6 @@ void TIME_Initialize(void)
             cnt--;
         }
     }
-#ifdef WIN32
-    InitializeQueryPerformance();
-#endif
 }
 
 // Explanation of the table.
